11월 26일 최종 수정
회원가입, 로그인, 채팅 구현
//조금 더 수정해야 할 것
1. 로그인 화면 배치.
2. 채팅화면 배치.
3. 채팅화면 스크롤바 구현